--- a/pages_css/styleport.css
+++ b/pages_css/styleport.css
@@ -1,8 +1,65 @@
-body {
-    background-color: #fff;
-    font-family: ;
-}
 :root {
-    --font-family: "Roboto", sans-serif;
-    --second-family: "Raleway", sans-serif;
+	--iris: #4d5ae5;
+	--ocean: #404bbf;
+	--navy-blue: #2e2f42;
+	--green: #31d0aa;
+	--slate: #434455;
+	--light-slate: #8e8f99;
+	--cornflower: #e7e9fc;
+	--cloud: #f4f4fd;
+	--navy-blue-modal: rgba(46, 47, 66, 0.4);
+	--grey: rgba(46, 47, 66, 0.7);
+	--white: #fff;
+	--dairy: #fcfcfc;
+}
+
+body {
+    font-family: "Roboto", "Raleway", sans-serif;
+  }
+
+  .list-nav {
+    color: var(--navy-blue);
+  }
+
+  .email,
+  .tel {
+    color: var(--slate);
+  }
+
+  hr {
+    color: red;
+  }
+
+  .button {
+    width: 69px;
+    height: 48px;
+    background-color: var(--cloud);
+    color: var(--ocean);
+    border: none;
+  }
+
+  .button:focus,
+  .button:hover {
+    color: var(--cornflower) ;
+  }
+
+  .all {
+    background-color: var(--iris);
+    color: var(--white);
+  }
+
+  .list-item-img {
+    width: 360px;
+    height: 420px;
+    border: solid  var(--cornflower);
+  }
+
+  .img {
+    width: 360px;
+    height: 300px;
+  }
+
+  .footer {
+    background-color: var(--navy-blue);
+    color: var(--white);
   }
